Memoize link operation (avoid crash on older devices)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,21 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
+        android:id="@+id/buttonGetMessageOriginal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="getMessageOriginal"
+        android:text="@string/get_message_original"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"/>
+
+    <Button
         android:id="@+id/buttonGetMessage1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,11 +45,11 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:onClick="getMessage"
+        android:onClick="getMessage1"
         android:text="@string/get_message_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"/>
+        app:layout_constraintTop_toBottomOf="@+id/buttonGetMessageOriginal"/>
 
     <Button
         android:layout_width="wrap_content"
